# TESReloaded10

Configurator/: Cargo.toml  build1.rs  shader.ini  test.ini
Configurator/src/: cfile.rs  effect_config.rs  lib.rs  main_config.rs  menu.rs  shader_config.rs  sys_string.rs
OblivionReloaded/: OblivionReloaded.vcxproj
TESReloaded/Core/: SettingStructure.h  ShadowManager.cpp
TESReloaded/Core/Hooks/Oblivion/: Hooks.cpp  Sleeping.cpp  Sleeping.h
TESReloaded/Framework/Oblivion/: Game.h
