[package]
name = "Configurator"
version = "0.1.0"
edition = "2024"
build = "build1.rs"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"]}
serde-deserialize-over = "*"
toml = { version = "0.8.23", features = ["preserve_order"] }
libc = "*"
memchr = "*"
hex-serde-util = "*"
once_cell = "*"
winapi = { version = "0.3", features = ["std", "d3d9", "d3d9types", "wtypes", "wtypesbase", "winuser"] }
bevy_reflect ="*"
strum = { version = "0.27", features = ["derive"] }
[build-dependencies]
cbindgen = "0.29.0"
embed-resource = "*"
